# site-utils

./: CHANGELOG.md  Cargo.toml
.github/workflows/: _cache-warm.yml  _pr-checks.yml  _release.yml  build.yml  patch-version.yml  pull-request.yml  release.yml
docs/dev/: commit-changelog.md
src/: config.rs  contact.rs  embed.rs  lib.rs  logging.rs  rate_limit.rs  utils.rs  validation.rs
src/smtp/: config.rs  mod.rs
tests/: smtp_integration.rs
